init: vue example

--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "overrides": {
       "typescript": "^5.0.0"
     }
-  }
+  },
+  "workspaces": [
+    "packages/*",
+    "examples/*",
+    "apps/*"
+  ]
 }
