--- a/packages/di/react/package.json
+++ b/packages/di/react/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@mygoodstack/di-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "description": "Dependency injection for React",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.module.js",
+  "unpkg": "./dist/index.umd.js",
+  "types": "./dist/index.d.ts",
+  "source": "src/index.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "microbundle",
+    "dev": "microbundle watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -23,8 +27,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "microbundle": "^0.15.1",
+    "tsup": "^8.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
