--- a/packages/di/core/package.json
+++ b/packages/di/core/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@mygoodstack/di-core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Dependency injection core for MyGoodStack",
   "main": "./dist/index.cjs",
   "module": "./dist/index.module.js",
   "unpkg": "./dist/index.umd.js",
   "types": "./dist/index.d.ts",
   "source": "src/index.ts",
+  "files": ["dist", "package.json", "README.md"],
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
