--- a/packages/di/react/package.json
+++ b/packages/di/react/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@mygoodstack/di-react",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Dependency injection for React",
   "main": "./dist/index.cjs",
   "module": "./dist/index.module.js",
   "unpkg": "./dist/index.umd.js",
   "types": "./dist/index.d.ts",
   "source": "src/index.ts",
+  "files": ["dist", "package.json", "README.md"],
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
@@ -14,7 +15,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mygoodstack/di-core": "workspace:*",
+    "@mygoodstack/di-core": "workspace:^0.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
