--- a/examples/vite-vue-demo/package.json
+++ b/examples/vite-vue-demo/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mygoodstack/di-core": "workspace:*",
     "@mygoodstack/di-vue": "workspace:*",
+    "reflect-metadata": "^0.2.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
