--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "prepare": "husky install",
-    "demo:react": "cd examples/react-demo && pnpm install && pnpm dev",
-    "demo:build": "cd examples/react-demo && pnpm build"
+    "clean": "find . -type d -name \"dist\" -prune -exec rm -rf '{}' + && find . -type d -name \"node_modules\" -prune -exec rm -rf '{}' + && pnpm install"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
