--- a/packages/di-vue/tsconfig.json
+++ b/packages/di-vue/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    /* build */
+    "composite": true
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
