--- a/examples/vite-vue-demo/package.json
+++ b/examples/vite-vue-demo/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mygoodstack/di-vue": "workspace:*",
+    "@mygoodstack/di-vue": "workspace:0.1.0",
     "reflect-metadata": "^0.2.1",
     "vue": "^3.5.13"
   },
