--- a/examples/vite-vue-demo/tsconfig.app.json
+++ b/examples/vite-vue-demo/tsconfig.app.json
@@ -12,7 +12,7 @@
 
     /* DI */
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
