--- a/examples/vite-react-demo/package.json
+++ b/examples/vite-react-demo/package.json
@@ -13,7 +13,8 @@
     "@mygoodstack/di-react": "workspace:^0.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "reflect-metadata": "^0.2.1"
+    "reflect-metadata": "^0.2.1",
+    "@mygoodstack/di-core": "workspace:^0.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
