--- a/packages/di-react/package.json
+++ b/packages/di-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mygoodstack/di-react",
-  "version": "0.1.7",
+  "version": "0.1.10",
   "description": "Dependency injection for React",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -29,12 +29,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@mygoodstack/di-core": "workspace:^0.1.2"
-  },
   "peerDependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@mygoodstack0.1/di-core": "workspace:^0.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
