--- a/packages/di-react/package.json
+++ b/packages/di-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mygoodstack/di-react",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "description": "Dependency injection for React",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@mygoodstack/di-core": "workspace:^0.1.3"
+    "@mygoodstack/di-core": "^0.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
