--- a/packages/di-vue/package.json
+++ b/packages/di-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mygoodstack/di-vue",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Dependency injection for Vue",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "vue": "^3.0.0",
-    "@mygoodstack/di-core": "workspace:^0.1.3"
+    "@mygoodstack/di-core": "^0.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
