--- a/packages/di-react/package.json
+++ b/packages/di-react/package.json
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@mygoodstack/di-core": "^0.1.3"
+    "@mygoodstack/di-core": "workspace:^0.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
