--- a/packages/di-vue/package.json
+++ b/packages/di-vue/package.json
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "vue": "^3.0.0",
-    "@mygoodstack/di-core": "^0.1.3"
+    "@mygoodstack/di-core": "workspace:^0.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
