--- a/examples/vite-react-demo/package.json
+++ b/examples/vite-react-demo/package.json
@@ -10,11 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mygoodstack/di-react": "workspace:^0.1.15",
+    "@mygoodstack/di-core": "workspace:*",
+    "@mygoodstack/di-react": "workspace:*",
+    "@mygoodstack/form-react": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.10",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "clsx": "^2.1.1",
+    "i18next": "^25.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.5.3",
     "reflect-metadata": "^0.2.1",
-    "@mygoodstack/di-core": "workspace:^0.1.3"
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
