feat: @mygoodstack/di-core 0.1.4

--- a/packages/di-core/tsconfig.json
+++ b/packages/di-core/tsconfig.json
@@ -6,10 +6,12 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
